--- a/index.html
+++ b/index.html
@@ -10,7 +10,43 @@
       href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="styles.css" />
     <title>FAQ Accordion Card</title>
   </head>
-  <body></body>
+  <body>
+    <div class="card-container mobile-card-container">
+      <div class="img-container">
+        <img
+          src="images/bg-pattern-mobile.svg"
+          alt="shadow"
+          class="shadow-img"
+        />
+        <img
+          src="images/illustration-woman-online-mobile.svg"
+          alt="woman online"
+          class="woman-img"
+        />
+      </div>
+      <div class="questions-container">
+        <h1 class="faq-title">FAQ</h1>
+        <div class="questions">
+          <div class="single-question">
+            <span>
+              <p>How many team members can I invite?</p>
+              <img
+                src="images/icon-arrow-down.svg"
+                alt="arrow down icon"
+                class="arrow-icon"
+              />
+            </span>
+            <p class="answer">
+              You can invite up to 2 additional users on the Free plan. There is
+              no limit on team members for the Premium plan.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
+  <script defer src="app.js"></script>
 </html>
