--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
       <div class="questions-container">
         <h1 class="faq-title">FAQ</h1>
         <div class="questions">
+          <!-- 1st question -->
           <div class="single-question">
             <span>
-              <p>How many team members can I invite?</p>
+              <p class="question-text">How many team members can I invite?</p>
               <img
                 src="images/icon-arrow-down.svg"
                 alt="arrow down icon"
@@ -42,6 +43,165 @@
             <p class="answer">
               You can invite up to 2 additional users on the Free plan. There is
               no limit on team members for the Premium plan.
+            </p>
+          </div>
+          <!-- 2nd question -->
+          <div class="single-question">
+            <span>
+              <p class="question-text">What is the maximum file upload size</p>
+              <img
+                src="images/icon-arrow-down.svg"
+                alt="arrow down icon"
+                class="arrow-icon"
+              />
+            </span>
+            <p class="answer">
+              No more than 2GB. All files in your account must fit your allotted
+              storage space.
+            </p>
+          </div>
+          <!-- 3rd question -->
+          <div class="single-question">
+            <span>
+              <p class="question-text">How do I reset my password?</p>
+              <img
+                src="images/icon-arrow-down.svg"
+                alt="arrow down icon"
+                class="arrow-icon"
+              />
+            </span>
+            <p class="answer">
+              Click “Forgot password” from the login page or “Change password”
+              from your profile page. A reset link will be emailed to you.
+            </p>
+          </div>
+          <!-- 4th question -->
+          <div class="single-question">
+            <span>
+              <p class="question-text">Can I cancel my subscription?</p>
+              <img
+                src="images/icon-arrow-down.svg"
+                alt="arrow down icon"
+                class="arrow-icon"
+              />
+            </span>
+            <p class="answer">
+              Yes! Send us a message and we’ll process your request no questions
+              asked.
+            </p>
+          </div>
+          <!-- 5th question -->
+          <div class="single-question">
+            <span>
+              <p class="question-text">Do you provide additional support?</p>
+              <img
+                src="images/icon-arrow-down.svg"
+                alt="arrow down icon"
+                class="arrow-icon"
+              />
+            </span>
+            <p class="answer">
+              Chat and email support is available 24/7. Phone lines are open
+              during normal business hours.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card-container desktop-card-container">
+      <img
+        src="/images/illustration-box-desktop.svg"
+        alt="box"
+        class="box-img"
+      />
+      <div class="img-container">
+        <img
+          src="images/bg-pattern-desktop.svg"
+          alt="shadow"
+          class="shadow-img-desktop"
+        />
+        <img
+          src="images/illustration-woman-online-desktop.svg"
+          alt="woman online"
+          class="woman-img-desktop"
+        />
+      </div>
+      <div class="questions-container">
+        <h1 class="faq-title">FAQ</h1>
+        <div class="questions">
+          <!-- 1st question -->
+          <div class="single-question">
+            <span>
+              <p class="question-text">How many team members can I invite?</p>
+              <img
+                src="images/icon-arrow-down.svg"
+                alt="arrow down icon"
+                class="arrow-icon"
+              />
+            </span>
+            <p class="answer">
+              You can invite up to 2 additional users on the Free plan. There is
+              no limit on team members for the Premium plan.
+            </p>
+          </div>
+          <!-- 2nd question -->
+          <div class="single-question">
+            <span>
+              <p class="question-text">What is the maximum file upload size</p>
+              <img
+                src="images/icon-arrow-down.svg"
+                alt="arrow down icon"
+                class="arrow-icon"
+              />
+            </span>
+            <p class="answer">
+              No more than 2GB. All files in your account must fit your allotted
+              storage space.
+            </p>
+          </div>
+          <!-- 3rd question -->
+          <div class="single-question">
+            <span>
+              <p class="question-text">How do I reset my password?</p>
+              <img
+                src="images/icon-arrow-down.svg"
+                alt="arrow down icon"
+                class="arrow-icon"
+              />
+            </span>
+            <p class="answer">
+              Click “Forgot password” from the login page or “Change password”
+              from your profile page. A reset link will be emailed to you.
+            </p>
+          </div>
+          <!-- 4th question -->
+          <div class="single-question">
+            <span>
+              <p class="question-text">Can I cancel my subscription?</p>
+              <img
+                src="images/icon-arrow-down.svg"
+                alt="arrow down icon"
+                class="arrow-icon"
+              />
+            </span>
+            <p class="answer">
+              Yes! Send us a message and we’ll process your request no questions
+              asked.
+            </p>
+          </div>
+          <!-- 5th question -->
+          <div class="single-question">
+            <span>
+              <p class="question-text">Do you provide additional support?</p>
+              <img
+                src="images/icon-arrow-down.svg"
+                alt="arrow down icon"
+                class="arrow-icon"
+              />
+            </span>
+            <p class="answer">
+              Chat and email support is available 24/7. Phone lines are open
+              during normal business hours.
             </p>
           </div>
         </div>
