--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
           class="woman-img"
         />
       </div>
+      <!-- FAQ Start -->
       <div class="questions-container">
         <h1 class="faq-title">FAQ</h1>
         <div class="questions">
